--- a/sqlalchemy-challenge.ipynb
+++ b/sqlalchemy-challenge.ipynb
@@ -223,73 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>prcp</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
-       "      <td>0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
-       "      <td>2.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
-       "      <td>2.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
-       "      <td>2.15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            prcp\n",
-       "date            \n",
-       "2016-08-24  0.08\n",
-       "2016-08-24   NaN\n",
-       "2016-08-24  2.15\n",
-       "2016-08-24  2.28\n",
-       "2016-08-24  2.15"
+       "list"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 451,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +255,7 @@
     "\n",
     "# Sort the dataframe by date\n",
     "prcp_df = prcp_df.sort_values(by=['date'])\n",
-    "prcp_df.head()"
+    "type(prcp_year_before)"
    ]
   },
   {
